# mpc_pathtracking

./: CMakeLists.txt  package.xml
config/: mpc_params.yaml  mpc_params0123.yaml  mpc_params_vel10.yaml
include/mpc/: mpc.h
include/mpc_path_tracking/: mpc_path_tracking.h
launch/: mpc_path_tracking.launch
src/: main.cpp  mpc.cpp  mpc_path_tracking.cpp  ros_control.cpp
